--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -91,7 +91,7 @@ test <- bestcost::attribute_yld_rr(
   bhd = input_data_morbidities$bhd_absolute[12],
   rr = unlist(input_data_morbidities[12, c("rr_mean", "rr_lowci", "rr_highci")]), # RR for asthma incidence for adults
   rr_increment = 10, 
-  erf_shape = "loglinear", 
+  erf_shape = "log_linear", 
   info_pollutant = input_data_morbidities$pollutant[12], 
   info_outcome = input_data_morbidities$outcome_metric[12]
 )
@@ -139,7 +139,7 @@ for(i in 1:nrow(input_data_morbidities)){
     bhd = 5269.46,
     rr = c(1.08, 1.07, 1.09),
     rr_increment = 10, 
-    erf_shape = "loglinear", 
+    erf_shape = "log_linear", 
     info_pollutant = "noise", 
     info_outcome = "YLD")
   }
@@ -159,7 +159,7 @@ for(i in 12){ # asthma incidence 20+
     rr = unlist(input_data_morbidities[i, 
                             c("rr_mean", "rr_lowci", "rr_highci")]),
     rr_increment = 10, 
-    erf_shape = "loglinear", 
+    erf_shape = "log_linear", 
     info_pollutant = input_data_morbidities$pollutant[i], 
     info_outcome = input_data_morbidities$outcome_metric[i])
   }
@@ -249,7 +249,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
     rr = unlist(input_data_mortality[i,
                                       c("rr_mean", "rr_lowci", "rr_highci")]),
     rr_increment = 10, 
-    erf_shape = "loglinear",
+    erf_shape = "log_linear",
     first_age_pop = 0,
     last_age_pop = 99,
     interval_age_pop = 1,
@@ -287,7 +287,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
     rr = unlist(input_data_mortality[i,
                                       c("rr_mean", "rr_lowci", "rr_highci")]),
     rr_increment = 10, 
-    erf_shape = "loglinear",
+    erf_shape = "log_linear",
     first_age_pop = 0,
     last_age_pop = 99,
     interval_age_pop = 1,
