--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -130,9 +130,7 @@ impact_annoyance_expDistribution_raw <-
 
 impact_morbidity_expDistribution_raw <- list()
 
-for(i in 1:nrow(input_data_morbidities)){
-  impact_morbidity_expDistribution_raw[[input_data_morbidities$year[i]]][[input_data_morbidities$rr_id[[i]]]] <-
-  bestcost::attribute_health_singlebhd_rr(
+impact_morbidity_expDistribution_raw <- bestcost::attribute_health_singlebhd_rr(
     exp = c(53, 57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
     prop_pop_exp = c(0.8187, 0.0743, 0.0549, 0.0368, 0.0138, 0.0015), # Values as example provided by NIPH
     cutoff = 53, # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
@@ -140,9 +138,9 @@ for(i in 1:nrow(input_data_morbidities)){
     rr = c(1.08, 1.07, 1.09),
     rr_increment = 10, 
     erf_shape = "loglinear", 
-    info_pollutant = "noise", 
-    info_outcome = "YLD")
-  }
+    info_pollutant = "noise")
+
+View(impact_morbidity_expDistribution_raw)
 ```
 
 ```{r impact morbidity}
