Re-coded the function "attribute_yld_singlebhd_rr"

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -147,8 +147,8 @@ for(i in 1:nrow(input_data_morbidities)){
 ```{r impact morbidity}
 impact_morbidities_raw <- list()
 
-for(i in 1:nrow(input_data_morbidities)){
-#for(i in 12){ # runs loop only for HO "asthma incidence 20+"
+#for(i in 1:nrow(input_data_morbidities)){
+for(i in 12){ # runs loop only for HO "asthma incidence 20+"
   impact_morbidities_raw[[input_data_morbidities$year[i]]][[input_data_morbidities$rr_id[[i]]]] <-
   bestcost::attribute_health_singlebhd_rr(
     #dw = 0.133, # for health state "Asthma, uncontrolled" (cf. bestcost::disability_weights)
