--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -233,7 +233,7 @@ impact_morbidities <-
 ```
 
 ```{r mortality using exposure distribution}
-impact_mortality_expDistribution_raw <- list()
+impact_deaths_expDistribution_raw <- list()
 
 # Calculate mortality impacts using bestcost function
 
@@ -241,7 +241,7 @@ for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate mult
 #for(i in 2){                           # Use this if you want to evaluate only one RR
   impact_mortality_expDistribution_raw[[input_data_mortality$year[i]]][[input_data_mortality$rr_id[[i]]]] <-
     
-    bestcost::attribute_mortality_lifetable_rr(
+    bestcost::attribute_deaths_lifetable_rr(
       exp = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
@@ -261,12 +261,45 @@ for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate mult
       year_of_analysis = 2019, 
       info = input_data_mortality$pollutant[i], 
       min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i],
-      max_age = if(is.na(input_data_mortality$max_age[i])) NULL else input_data_mortality$max_age[i],
-      corrected_discount_rate = 0)
+      max_age = if(is.na(input_data_mortality$max_age[i])) NULL else input_data_mortality$max_age[i])
 }
 
-head(impact_mortality_expDistribution_raw$`2019`$`PM2.5_premature deaths_all causes_adults_main_ERS-ISEE_2022_selected`$deaths$impact) # to check results stay the same
+head(impact_mortality_expDistribution_raw$`2019`$`PM2.5_premature deaths_all causes_adults_main_ERS-ISEE_2022_selected`$total$impact) # to check results stay the same
 #4250 1537 2911
+
+
+impact_mortality_expDistribution_raw <- list()
+
+# Calculate mortality impacts using bestcost function
+
+for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate multiple RRs
+#for(i in 2){                           # Use this if you want to evaluate only one RR
+  impact_yll_expDistribution_raw[[input_data_mortality$year[i]]][[input_data_mortality$rr_id[[i]]]] <-
+    
+    bestcost::attribute_yll_lifetable_rr(
+      exp = c(8, 9, 10), # Fake data just for testing purposes
+      prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
+      cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
+      rr = unlist(input_data_mortality[i,
+                                        c("rr_mean", "rr_lowci", "rr_highci")]),
+      rr_increment = 10, 
+      erf_shape = "log_linear",
+      first_age_pop = 0,
+      last_age_pop = 99,
+      interval_age_pop = 1,
+      prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
+      prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
+      prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
+      prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
+      population_male = lifetable_withPopulation[["male"]]$population, 
+      population_female = lifetable_withPopulation[["female"]]$population, 
+      year_of_analysis = 2019, 
+      info = input_data_mortality$pollutant[i], 
+      min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i],
+      max_age = if(is.na(input_data_mortality$max_age[i])) NULL else input_data_mortality$max_age[i])
+}
+
+
 ```
 
 ```{r impact mortality}
