--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -298,7 +298,7 @@ for(i in 1:nrow(input_data_mortality)){  # Use this if you want to evaluate mult
       min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i],
       max_age = if(is.na(input_data_mortality$max_age[i])) NULL else input_data_mortality$max_age[i])
 }
-
+head(impact_yll_expDistribution_raw$`2019`$`PM2.5_premature deaths_all causes_adults_main_ERS-ISEE_2022_selected`$total$impact) 
 
 ```
 
