--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -232,6 +232,27 @@ impact_morbidities <-
 
 ```
 
+```{r}
+# Test delta comparison function with fake values
+  test_comparison <-
+  bestcost::compare_health_singlebhd_rr(
+    comparison_method = "delta",
+    exp_1 = 8.85,  # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
+    exp_2 = 6,
+    cutoff = 5,    
+    bhd_1 = 27546,
+    bhd_2 = 25000,
+    rr = c(1.118, 1.060, 1.179),
+    rr_increment = 10, 
+    erf_shape = "log_linear", 
+    info_1 = "PM2.5_mortality_2010",
+    info_2 = "PM2.5_mortality_2020")
+
+
+```
+
+
+
 ```{r mortality using exposure distribution}
 impact_deaths_expDistribution_raw <- list()
 
