--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -169,7 +169,7 @@ for(i in 1:nrow(input_data_morbidities)){
 
 ```{r}
 # Test delta comparison function with fake values
-  test_comparison <-
+  test_compare_health_singlebhd_rr <-
   bestcost::compare_health_singlebhd_rr(
     comparison_method = "delta",
     exp_1 = 8.85,  # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
