--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -169,13 +169,29 @@ for(i in 1:nrow(input_data_morbidities)){
 
 ```{r}
 # Test delta comparison function with fake values
-  test_compare_health_singlebhd_rr <-
+  test_delta_singlebhd_rr <-
   bestcost::compare_health_singlebhd_rr(
     comparison_method = "delta",
-    exp_1 = 8.85,  # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
+    exp_1 = 8.85, 
     exp_2 = 6,
     cutoff = 5,    
-    bhd_1 = 27546,
+    bhd_1 = 25000,
+    bhd_2 = 25000,
+    rr = c(1.118, 1.060, 1.179),
+    rr_increment = 10, 
+    erf_shape = "log_linear", 
+    info_1 = "PM2.5_mortality_2010",
+    info_2 = "PM2.5_mortality_2020")
+
+
+# Test pif comparison function with fake values
+  test_pif_singlebhd_rr <-
+  bestcost::compare_health_singlebhd_rr(
+    comparison_method = "pif",
+    exp_1 = 8.85,  
+    exp_2 = 6,
+    cutoff = 5,    
+    bhd_1 = 25000,
     bhd_2 = 25000,
     rr = c(1.118, 1.060, 1.179),
     rr_increment = 10, 
