Added min_age & max_age checks in fct "compile_input" to resolve 0 impact outcome issue

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -167,7 +167,38 @@ for(i in 12){ # runs loop only for HO "asthma incidence 20+"
 
 ```
 
-```{r}
+```{r morbidity yld lifetable}
+yld <- attribute_yld_lifetable_rr(
+  exp = input_data_mortality$exp[2],
+  prop_pop_exp = 1,
+  cutoff = input_data_mortality$cutoff[2],
+  rr = unlist(input_data_mortality[2, c("rr_mean", "rr_lowci", "rr_highci")]),
+  rr_increment = 10, 
+  erf_shape = "log_linear",
+  first_age_pop = 0,last_age_pop = 99,
+  interval_age_pop = 1,
+  prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
+  prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
+  prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
+  prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
+  population_male = lifetable_withPopulation[["male"]]$population, 
+  population_female = lifetable_withPopulation[["female"]]$population,
+  year_of_analysis = 2019, 
+  info = input_data_mortality$pollutant[2], 
+  min_age = 20,
+  # min_age = input_data_mortality$min_age[2],
+  # min_age = NA,
+  max_age = 99,
+  # max_age = input_data_mortality$max_age[2],
+  # max_age = NA,
+  corrected_discount_rate = 0,
+  dw = 0.5)
+
+head(yld$yld$impact_rounded)
+```
+
+
+```{r delta comparison}
 # Test delta comparison function with fake values
 test_delta_singlebhd_rr <-
   bestcost::compare_health_singlebhd_rr(
