--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -12,7 +12,7 @@ Pending
 - healthiar vs. geluft in the package
 - test
 
-# Load packages
+# Load packages and data
 
 
 The R script required the loading of certain R packages. 
@@ -60,7 +60,7 @@ library(bestcost)
 ```
 
 
-```{r load data & bestcost package}
+```{r load bestcost package}
 # Load package (either current version or installed version)
 devtools::load_all(export_all = FALSE)
 library(bestcost)
@@ -83,6 +83,8 @@ load("../testing/input/input_data_for_testing_Rpackage.RData")
 
 
 # Calculate health impacts
+
+## Attributable health impact
 
 ```{r Test attribute_yld_rr single input value, eval=FALSE, include=FALSE}
 test <- bestcost::attribute_yld_rr(
@@ -196,43 +198,6 @@ yld <- attribute_yld_lifetable_rr(
 
 head(yld$yld$impact_rounded)
 ```
-
-
-```{r delta comparison}
-# Test delta comparison function with fake values
-test_delta_singlebhd_rr <-
-  bestcost::compare_health_singlebhd_rr(
-    comparison_method = "delta",
-    exp_1 = 8.85, 
-    exp_2 = 6,
-    cutoff = 5,    
-    bhd_1 = 25000,
-    bhd_2 = 25000,
-    rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
-    erf_shape = "log_linear", 
-    info_1 = "PM2.5_mortality_2010",
-    info_2 = "PM2.5_mortality_2020")
-
-
-# Test pif comparison function with fake values
-test_pif_singlebhd_rr <-
-  bestcost::compare_health_singlebhd_rr(
-    comparison_method = "pif",
-    exp_1 = 8.85,  
-    exp_2 = 6,
-    cutoff = 5,    
-    bhd_1 = 25000,
-    bhd_2 = 25000,
-    rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
-    erf_shape = "log_linear", 
-    info_1 = "PM2.5_mortality_2010",
-    info_2 = "PM2.5_mortality_2020")
-
-
-```
-
 
 
 ```{r mortality using exposure distribution}
@@ -417,6 +382,65 @@ head(impact_mortality_raw[["2019"]][["PM2.5_premature deaths_all causes_adults_m
 #   dplyr::arrange(desc(info_pollutant), ref, outcome_id, rr_source)
 
 ```
+
+
+## Comparison
+
+```{r comparison singlebhd_rr}
+# Test delta comparison function with fake values
+comparison_delta_singlebhd_rr <-
+  bestcost::compare_health_singlebhd_rr(
+    comparison_method = "delta",
+    exp_1 = 8.85, 
+    exp_2 = 6,
+    cutoff = 5,    
+    bhd_1 = 25000,
+    bhd_2 = 25000,
+    rr = c(1.118, 1.060, 1.179),
+    rr_increment = 10, 
+    erf_shape = "log_linear", 
+    info_1 = "PM2.5_mortality_2010",
+    info_2 = "PM2.5_mortality_2020")
+
+
+# Test pif comparison function with fake values
+comparison_pif_singlebhd_rr <-
+  bestcost::compare_health_singlebhd_rr(
+    comparison_method = "pif",
+    exp_1 = 8.85,  
+    exp_2 = 6,
+    cutoff = 5,    
+    bhd_1 = 25000,
+    bhd_2 = 25000,
+    rr = c(1.118, 1.060, 1.179),
+    rr_increment = 10, 
+    erf_shape = "log_linear", 
+    info_1 = "PM2.5_mortality_2010",
+    info_2 = "PM2.5_mortality_2020")
+
+
+```
+
+
+```{r comparison ar}
+# Test delta comparison function with fake values
+# No PIF option in ar
+comparison_delta_singlebhd_ar <-
+  bestcost::compare_health_ar(
+    exp_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
+    exp_2 = c(50, 55, 60, 65, 75), # Fake values
+    pop_exp_1 = c(387500, 286000, 191800, 72200, 7700), # Values as example provided by NIPH
+    pop_exp_2 = c(387500, 286000, 191800, 72200, 7700), # Fake values
+    erf_c = "78.9270-3.1162*c+0.0342*c^2",
+    info_1 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2020),
+    info_2 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2022))
+
+
+
+
+```
+
+
 
 # Export 
 
